--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,5 @@
-@import '/node_modules/flowbite-vue/dist/index.css';
+@import "/node_modules/flowbite-vue/dist/index.css";
+@import "./fonts.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
